Update JS and styles to fix usability issues on iOS.

--- a/mega/scss/styles.scss
+++ b/mega/scss/styles.scss
@@ -15,6 +15,7 @@
         GENERAL CLASSES
 *********************************/
 html {
+	width: 100%;
 	height: 100%;
 	overflow: hidden;
 }
@@ -23,8 +24,22 @@ body {
     padding: 0;
     margin: 0;
 	height: 100%;
+	width: 100%;
 	overflow: hidden;
 	background-color: $color-black;
+	.body-wrap {
+		display: block;
+		width: 100%;
+		height: 100%;
+		overflow: visible;
+		position: fixed;
+		top: 0;
+		left: 0;
+		&.inactive {
+			left: -100%;
+			right: auto;
+		}
+	}
 }
 a {
 }
@@ -54,9 +69,13 @@ ul {
 [class*="-arrow-"] {
 	background-image: url("../img/arrows.svg");
 }
-
+[class*="ui-"] {
+	&.active {
+		z-index: 10;
+	}
+}
 [class*="ui-moving-"] {
-	.ui-menu, .ui-match {
+	.ui-menu, .ui-match, .body-wrap {
 		@include transition(left 0.5s, right 0.5s);
 	}
 }
@@ -79,13 +98,6 @@ section[class^="ui-"] {
     left: 0;
 	top: $height-header;
 	&.inactive {
-        left: -100%;
-    }
-}
-.ui-match {
-	&.active {
-        right: 0%;
-        left: inherit;
     }
 }
 
